# mkdocs-python-example

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  mypackage.md  pyproject.toml
my_package/: my_module.py
